src/test/ui/const-generics/issues/issue-62456.min.stderr
error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/issue-62456.rs:7:20
   |
LL |     let _ = [0u64; N + 1];
   |                    ^ non-trivial anonymous constants must not depend on the parameter `N`
   |
   = help: it is currently only allowed to use either `N` or `{ N }` as generic constants

error: aborting due to previous error

